[package]
name = "klgp"
version = "0.1.0"
authors = ["Kyle Nickerson <kyle.nickerson8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tensorflow = "0.15.0"
rand = "0.7"
csv = "1.1"
rustlearn = "0.5.0"
toml = "0.4.2"